--- a/M1-D10-QUIZ.html
+++ b/M1-D10-QUIZ.html
@@ -5,6 +5,15 @@
     <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
+      <h1>Welcome to the Quiz!!🎉</h1>
+      <div class="questions-section">
+        <div>
+        </div>
+
+      </div>
+
+
+        
 
         <script type="text/javascript" src="script.js"></script>
     </body>
