--- a/M1-D10-QUIZ.html
+++ b/M1-D10-QUIZ.html
@@ -6,10 +6,9 @@
     </head>
     <body>
       <h1>Welcome to the Quiz!!🎉</h1>
+      <input type="radio" value="true">
       <div class="questions-section">
-        <div>
-        </div>
-
+        <!-- All the divs are inserted here via JS -->       
       </div>
 
 
