--- a/M1-D10-QUIZ.html
+++ b/M1-D10-QUIZ.html
@@ -6,11 +6,18 @@
     </head>
     <body>
       <h1>Welcome to the Quiz!!🎉</h1>
+      
       <input type="radio" value="true">
       <div class="questions-section">
         <!-- All the divs are inserted here via JS -->       
       </div>
 
+
+      <p>Select your size:</p>
+      <div id="group">
+      </div>
+  
+      <p id="output"></p>
 
         
 
