Output now showing what was selected

--- a/M1-D10-QUIZ.html
+++ b/M1-D10-QUIZ.html
@@ -12,14 +12,13 @@
         <!-- All the divs are inserted here via JS -->       
       </div>
 
-
-      <p>Select your size:</p>
+    <div class="output-div">
+      <h3>Here is what you selected:</h3>
       <div id="group">
       </div>
   
       <p id="output"></p>
-
-        
+    </div>
 
         <script type="text/javascript" src="script.js"></script>
     </body>
