--- a/M1-D10-QUIZ.html
+++ b/M1-D10-QUIZ.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Hi there</title>
+        <meta charset="UTF-8">
     <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
