--- a/M1-D10-QUIZ.html
+++ b/M1-D10-QUIZ.html
@@ -8,7 +8,7 @@
     <body>
       <h1>Welcome to the Quiz!!🎉</h1>
       
-      <input type="radio" value="true">
+
       <div class="questions-section">
         <!-- All the divs are inserted here via JS -->       
       </div>
@@ -19,6 +19,10 @@
       </div>
   
       <p id="output"></p>
+    </div>
+
+    <div>
+        <p id="output2"></p>
     </div>
 
         <script type="text/javascript" src="script.js"></script>
